Update to scalate 1.7.1, scala 2.11.8 to fix website compilation for Java 8