@@ -1,6 +1,6 @@
 #!/bin/sh
 
-export MAVEN_OPTS="-Xmx986m -XX:MaxPermSize=350m"
+export MAVEN_OPTS="-Xmx986m"
 
 echo ============================================================================
 echo Deploying hawtio website
@@ -13,7 +13,7 @@ echo ===========================================================================
 #mvn clean scalate:sitegen scalate:deploy
 
 cd website && \
-mvn clean scalate:sitegen && \
+mvn clean compile org.scalatra.scalate:maven-scalate-plugin_2.11:sitegen && \
 echo 'hawt.io' > target/sitegen/CNAME && \
 npm install && \
 gulp
